# tempest_ec2

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg
doc/source/: index.rst  installation.rst  usage.rst
tempest_ec2/: __init__.py  botoclients.py  config.py  plugin.py
tempest_ec2/tests/: test_tempest_ec2.py
