[metadata]
name = tempest_ec2
summary = Tempest Plugin for EC2 tests
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tempest_ec2
[entry_points]
tempest.test_plugins =
    ec2_tests = tempest_ec2.plugin:EC2TempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tempest_ec2/locale
domain = tempest_ec2

[update_catalog]
domain = tempest_ec2
output_dir = tempest_ec2/locale
input_file = tempest_ec2/locale/tempest_ec2.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tempest_ec2/locale/tempest_ec2.pot
